--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="https://icon2.cleanpng.com/20171220/vte/mercedes-logo-png-5a3aaf46d69175.3260781815137953988789.jpg">
+      <img src="https://www.tandtmotors.mercedes-benz.co.in/etc/designs/embcms/images/icon/mblogo/MB-star_n_web.svg">
     </a>
   </header>
   <p>Other Page Content</p>
