--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <header>
     <a href="index.html">
       <img src="https://www.tandtmotors.mercedes-benz.co.in/etc/designs/embcms/images/icon/mblogo/MB-star_n_web.svg">
+      
+      <div><p style="color: white;padding-top: 10px;">Mercedes Benz</p></div>
+      
     </a>
   </header>
   <p>Other Page Content</p>
