--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       
     </a>
   </header>
-  <p>Other Page Content</p>
+  <p>Prateek Motors</p>
+  <div>
+    Tel:0001-111222, Email: mailto:prateekmotors@mercedestandt.com
+  </div>
 </body>
 <style>
   body {
