--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <a href="index.html">
       <img src="https://www.tandtmotors.mercedes-benz.co.in/etc/designs/embcms/images/icon/mblogo/MB-star_n_web.svg">
       
-      <div><p style="color: white;padding-top: 10px;">Mercedes Benz</p></div>
+      <div><p style="color: white;padding-top: 10px;text-decoration: none;">Mercedes Benz</p></div>
       
     </a>
   </header>
-  <p>Prateek Motors</p>
+  <p>Aligarh Motors</p>
   <div>
     Tel:0001-111222, Email: mailto:prateekmotors@mercedestandt.com
   </div>
