--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<html>
+  <title>Mercedes Site</title>
 <body>
   <header>
     <a href="index.html">
@@ -28,3 +29,4 @@ header img {
   padding: 8px;
 }
 </style>
+</html>
