--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-  <title>Mercedes Site</title>
+  
 <body>
   <header>
     <a href="index.html">
       
-      <div><p style="color: white;padding-top: 10px;text-decoration: none;">Mercedes Benz</p></div>
+      <div><p style="color: white;padding-top: 10px;text-decoration: none;">My Site</p></div>
       
     </a>
   </header>
