--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
+<!DOCTYPE html>
 <html>
-  
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/w3css/3/w3.css">
 <body>
-  <header>
-    <a href="index.html">
-      
-      <div><p style="color: white;padding-top: 10px;text-decoration: none;">My Site</p></div>
-      
-    </a>
-  </header>
- 
-</body>
-<style>
-  body {
-  margin: 0;
-}
-header {
-  /*background: url(http://www.lorempixel.com/1000/200/abstract); */
-  overflow: auto;
-  background: linear-gradient(#231F1F, #040100);
-}
 
-header img {
-  float: left;
-  padding: 8px;
-}
-</style>
+<!-- Navigation -->
+<nav class="w3-bar w3-black">
+  <a href="#home" class="w3-button w3-bar-item">Home</a>
+  <a href="#band" class="w3-button w3-bar-item">Band</a>
+  <a href="#tour" class="w3-button w3-bar-item">Tour</a>
+  <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+</nav>
+
+</body>
 </html>
+
