--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <!-- Navigation -->
 <nav class="w3-bar w3-black">
   <a href="#home" class="w3-button w3-bar-item">Home</a>
-  <a href="#band" class="w3-button w3-bar-item">Band</a>
-  <a href="#tour" class="w3-button w3-bar-item">Tour</a>
-  <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+  <a href="#band" class="w3-button w3-bar-item">Page 1</a>
+  <a href="#tour" class="w3-button w3-bar-item">Page 2</a>
+  <a href="#contact" class="w3-button w3-bar-item">Page 3</a>
 </nav>
 
 </body>
