--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a href="#tour" class="w3-button w3-bar-item">Page 2</a>
   <a href="#contact" class="w3-button w3-bar-item">Page 3</a>
 </nav>
+<!-- Navigation -->
 
 </body>
 </html>
