--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <a href="#home" class="w3-button w3-bar-item">Home</a>
   <a href="#band" class="w3-button w3-bar-item">Page 1</a>
   <a href="#tour" class="w3-button w3-bar-item">Page 2</a>
-  <a href="#contact" class="w3-button w3-bar-item">Page 3</a>
+  <a href="/contact.html" class="w3-button w3-bar-item">Contact</a>
 </nav>
 <!-- Navigation -->
 
